data/Java/05-use-uninitialized-instance-variable/6/[M]Error.txt
https://stackoverflow.com/questions/49072803/error-variable-might-not-have-been-initialized-how-to-initialize-arraylist
Main.java:22: error: variable 'RPM' might not have been initialized
                RPM.add(scanner.nextDouble());
                ^